--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -1,10 +1,11 @@
 name: Code Quality
 
 on:
-  push:
+  pull_request:
+    types: [ opened, synchronize, reopened ]
     branches:
       - main
-  pull_request:
+  push:
     branches:
       - main
 
@@ -15,6 +16,7 @@ jobs:
       contents: write
       pull-requests: write
       checks: write
+      security_events: write
     steps:
       - uses: actions/checkout@v3
         with:
