--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -16,7 +16,7 @@ jobs:
       contents: write
       pull-requests: write
       checks: write
-      security_events: write
+      security-events: write
     steps:
       - uses: actions/checkout@v3
         with:
