--- a/.editorconfig
+++ b/.editorconfig
@@ -18,3 +18,18 @@ trim_trailing_whitespace = false
 [*.{json,yml,yaml,scss,css,less,feature}]
 indent_size = 2
 tab_width = 2
+
+[*.{kt,kts}]
+end_of_line = lf
+ij_kotlin_allow_trailing_comma = true
+ij_kotlin_allow_trailing_comma_on_call_site = true
+ij_kotlin_imports_layout = *, java.**, javax.**, kotlin.**, ^
+ij_kotlin_packages_to_use_import_on_demand = unset
+max_line_length = 240
+ktlint_code_style = ktlint_official
+ktlint_chain_method_rule_force_multiline_when_chain_operator_count_greater_or_equal_than = unset
+ktlint_class_signature_rule_force_multiline_when_parameter_count_greater_or_equal_than = 1
+ktlint_function_naming_ignore_when_annotated_with = unset
+ktlint_function_signature_body_expression_wrapping = multiline
+ktlint_function_signature_rule_force_multiline_when_parameter_count_greater_or_equal_than = 2
+ktlint_ignore_back_ticked_identifier = false
