--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # --- PROJECT --------------------------------------------- #
 #
 group=io.justdevit.libs
-version=0.1.2
+version=0.2.0
 #
 # --- KOTLIN ---------------------------------------------- #
 #
@@ -11,4 +11,5 @@ kotlin.code.style=official
 # --- DEPENDENCY VERSIONS --------------------------------- #
 #
 kotestVersion=5.8.0
+kotlinCoroutinesVersion=1.8.0
 mockkVersion=1.13.9
