--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 #
 # --- PROJECT --------------------------------------------- #
 #
-group=io.justdevit.libs
-version=0.2.0
+group=io.justdevit.tools
+version=0.2.1
 #
 # --- KOTLIN ---------------------------------------------- #
 #
