--- a/.editorconfig
+++ b/.editorconfig
@@ -39,3 +39,4 @@ ktlint_standard_no-empty-first-line-in-class-body = disabled
 ktlint_standard_multiline-expression-wrapping = disabled
 ktlint_standard_multiline-if-else = disabled
 ktlint_standard_string-template-indent = disabled
+ktlint_standard_expression-operand-wrapping = disabled
